--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": [
     "./TYPECODE/",
+    "../caracAL-scripts/**/*.ts",
     "./node_modules/typed-adventureland",
     "./src/ts_defs"
   ],
@@ -31,10 +32,14 @@
 
     /* Modules */
     "module": "es2015" /* Specify what module code is generated. */,
-    "rootDir": "./TYPECODE/" /* Specify the root folder within your source files. */,
-    // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    // "rootDir": "./TYPECODE/" /* Specify the root folder within your source files. */,
+    "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
+    "paths": {
+      "@library/*": ["../caracAL-scripts/library/*"],
+      "@classes/*": ["../caracAL-scripts/classes/*"],
+      "@caracal/*": ["./TYPECODE/caracAL/*"]
+    } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
